# smartcab-hub

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  compose-portable.yaml  compose.yaml  mosquitto.conf  pyproject.toml  zigbee2mqtt.yaml
app/: main.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html
app/templates/css/: style.css
app/zigbee/: sub.py
backend/: .env  Dockerfile  README.md  __init__.py  config.example.yaml  config.py  devmap.yaml  parsing_conf.py  pyproject.toml  run.py
backend/.secrets/: secret_key
backend/certs/: hub  hub.pub  myCA.key  myCA.pem  sch1357.ru.crt  sch1357.ru.key
backend/data/: __all_models.py  backups.py  eval_types.py  indicators.py
backend/db/: README.md  dump.xlsx  smartcab.sqlite
backend/smartcab/: __init__.py  __main__.py  dev.py  firewall.py  pyproject.toml  run.py  use_db.py  utils.py
backend/smartcab/api/: admission.py  devices.py  hub_password.py  schedule.py  statistic.py
backend/smartcab/data/: __all_models.py  admins.py  backups.py  db.py  eval_types.py  hub_password.py  indicators.py  lessons.py  schedule.py  sensors.py
backend/smartcab/interface/: __init__.py  mqtt.py  ssh.py
backend/smartcab/zigbee/: sub.py
docs/: config_format.md
flask-app/: main.py
frontend/: .dockerignore  .env  Dockerfile  package-lock.json  package.json  vite.config.ts  webpack.config.js
frontend/certs/: gencerts.sh  myCA.srl  sch1357.ru.csr  sch1357.ru.ext
frontend/public/: index.html
frontend/src/: const.tsx  index.css  index.js  index.scss  index.tsx
frontend/src/components/: App.js  App.jsx  App.scss  CloseButton.jsx  ConferenceManager.tsx  ControlPage.js  ControlPage.jsx  ControlPage.scss  ErrorBoundary.tsx  Footer.js  Footer.jsx  Footer.scss  Footer.tsx  Header.css  Header.js  Header.jsx  Header.scss  Header.tsx  Hiding.jsx  Hiding.scss  Hiding.tsx  HidingAll.jsx  HidingAll.scss  HidingPage.jsx  Pin.jsx  Pin.scss  Pin.tsx  PinLockButton.jsx  PinLockButton.tsx  PinView.jsx  PinView.tsx  PinViewStyle.jsx  PinViewStyle.tsx  Sensors.js  Sidebar.js  Sidebar.jsx  Sidebar.scss  Sidebar.tsx  Statstics.tsx  VoIP.scss  (+2 more)
frontend/src/components/controls/: Button.js  Button.jsx  Button.scss  Button.tsx  Slider.jsx  Slider.tsx  Switch.jsx  Switch.scss  Switch.tsx
frontend/src/components/layout/: AppLayout.js  AppLayout.jsx
frontend/src/components/sensors/: Co2.jsx  Co2.tsx  Humidity.jsx  Humidity.tsx  Pressure.jsx  Pressure.tsx  SensorWarning.jsx  SensorWarning.scss  SensorWarning.tsx  Temp.jsx  Temp.tsx  Time.jsx  Time.tsx
frontend/src/pages/: App.jsx  App.scss  App.tsx  AppLayout.jsx  AppLayout.tsx  ControlPage.jsx  ControlPage.scss  ControlPage.tsx  GradeCard.jsx  GradeCard.scss  GradeCard.tsx
frontend/ssl/: create_certificate_for_domain.sh  device.key  rootCA.key  rootCA.pem  rootCA.srl  smartcab.sch1357.ru.crt  smartcab.sch1357.ru.csr
frontend_refactored/: index.html  package.json
frontend_refactored/public/: index.html
frontend_refactored/src/components/: Footer.tsx  Header.scss  Hiding.scss  Pin.scss  PinView.tsx  Sidebar.scss  Statstics.tsx  config.tsx
frontend_refactored/src/pages/: App.scss  AppLayout.tsx  ControlPage.scss  ControlPage.tsx
redis/: Dockerfile  entrypoint.sh
server/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  server.py
server/alembic/: README.md
server/zigbee/: sub.py
zigbee2mqtt-data/: configuration.yaml
(+5 files in other folders)
