[tool.poetry]
name = "hub"
version = "0.1.0"
description = ""
authors = ["Alchemmist <anton.ingrish@gmail.com>", "Mark Meliksetyan <markmelix@gmail.com>"]
packages = [{include = "backend"}]


[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
flask = "^2.3.3"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
