[tool.poetry]
name = "smartcab-hub"
version = "0.1.0"
description = "Local hub api server"
authors = ["Alchemmist <anton.ingrish@gmail.com>", "Mark Meliksetyan <markmelix@gmail.com>"]
packages = [{include = "smartcab"}]


[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
flask = {extras = ["async"], version = "^3.0.2"}
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.23"
paramiko = "^3.4.0"
asyncssh = "^2.14.2"
gunicorn = "^21.2.0"
redis = {extras = ["hiredis"], version = "^5.0.2"}


[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
